feat: update oauth flow and update store oauth key to the database
