# docs/swagger.json
@@ -68,48 +68,6 @@
                 }
             }
         },
-        "/auth/oauth/session": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Creates an OAuth session for linking accounts. Required for authenticated users who want to link external OAuth accounts",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "oauth"
-                ],
-                "summary": "Create OAuth session",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Redirect URL after successful OAuth linking",
-                        "name": "next",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OAuth session created",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to generate oauth state",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/oauth/{provider}": {
             "get": {
                 "description": "Redirects user to OAuth provider for authentication",
@@ -124,6 +82,12 @@
                         "name": "provider",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Redirect URL after successful OAuth linking",
+                        "name": "next",
+                        "in": "query"
                     }
                 ],
                 "responses": {
